--- a/css/Discord.css
+++ b/css/Discord.css
@@ -329,6 +329,7 @@ textarea,
 }
 ::selection {
   background: var(--main-color);
+  color: var(--text-normal);
 }
 .focus-rings-ring {
   box-shadow: 0 0 0 4px var(--focus-color);
@@ -378,6 +379,18 @@ textarea,
   white-space: nowrap;
   order: 1;
 }
+.typeWindows__421ed > .wordmark__421ed:before {
+  content: "ClearVision";
+  color: hsla(0, 0%, 100%, 0.7);
+  font-size: 14px;
+  text-shadow: 0 0 3px #000;
+}
+.typeWindows__421ed > .wordmark__421ed:after {
+  content: "v6.9.0";
+  color: hsla(0, 0%, 100%, 0.3);
+  font-family: var(--code-font);
+  font-size: 10px;
+}
 .typeWindows__421ed > .wordmark__421ed > svg {
   filter: drop-shadow(0 0 5px var(--main-color));
   margin-top: 6px;
@@ -404,6 +417,36 @@ textarea,
 }
 .typeWindows__421ed > .winButtonClose__421ed:hover {
   background: var(--danger-color);
+}
+.typeMacOS__421ed {
+  width: 70px;
+  height: 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.typeMacOS__421ed.unfocused__421ed .macButton__421ed {
+  background: hsla(0, 0%, 100%, 0.7);
+}
+.typeMacOS__421ed > .macButtons__421ed {
+  padding: 0 10px;
+}
+.typeMacOS__421ed:before,
+.typeMacOS__421ed:after {
+  margin: 0 2px;
+  font-size: 10px;
+  order: 1;
+}
+.typeMacOS__421ed:before {
+  content: "CV";
+  color: var(--main-color);
+  font-weight: 700;
+  text-shadow: 0 0 3px;
+}
+.typeMacOS__421ed:after {
+  content: "6.9.0";
+  color: hsla(0, 0%, 100%, 0.3);
 }
 .header__0b563 {
   background-color: rgba(
@@ -915,25 +958,9 @@ html:not(.visual-refresh) .sidebar_c48ade:not(.hidden_c48ade) {
 .panels_c48ade > :first-child {
   box-shadow: 0 -2px 10px rgba(0, 0, 0, calc(var(--background-shading) * 0.3));
 }
-.theme-dark .panel__5dec7 {
+.theme-dark .panel__5dec7,
+.theme-dark .container__37e49 {
   background-color: rgba(0, 0, 0, 0);
-}
-.container__37e49 > .flex_abf706 {
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 15px;
-}
-.container__37e49 > .flex_abf706 > :nth-child(n + 2) {
-  position: relative;
-  margin-left: -1px;
-}
-.container__37e49 > .flex_abf706 > :nth-child(n + 2):before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 2px;
-  bottom: 2px;
-  width: 1px;
-  background: hsla(0, 0%, 100%, 0.2);
 }
 .theme-dark .avatarWrapper__37e49 {
   min-width: calc(var(--channels-width) - 120px);
@@ -960,7 +987,6 @@ html:not(.visual-refresh) .sidebar_c48ade:not(.hidden_c48ade) {
 }
 .theme-dark .container__37e49 {
   position: relative;
-  background: rgba(0, 0, 0, 0);
 }
 .theme-dark .container__37e49 .withTagAsButton_b2ca13,
 .theme-dark .container__37e49 .withTagless_b2ca13 {
@@ -973,8 +999,6 @@ html:not(.visual-refresh) .sidebar_c48ade:not(.hidden_c48ade) {
   color: #fff;
 }
 .theme-dark .container__37e49 .avatar__37e49 {
-  width: 32px !important;
-  height: 32px !important;
   transition: all 0.15s ease-in-out;
 }
 .theme-dark .container__37e49 .avatar__37e49:after {
@@ -1007,17 +1031,9 @@ html:not(.visual-refresh) .sidebar_c48ade:not(.hidden_c48ade) {
 .theme-dark .container__37e49 .avatar__37e49:hover foreignObject {
   opacity: 0.5;
 }
-.theme-dark .container__37e49 .title_d1da5f {
-  color: #fff;
-}
 .container_e131a9 {
   border-color: rgba(0, 0, 0, 0);
   background: rgba(0, 0, 0, 0);
-}
-.container_e131a9 > .flex_abf706 {
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  padding: 5px;
 }
 .container_e131a9 .inner_e131a9 .rtcConnectionStatus_c0cb95 .ping_c0cb95 {
   width: 16px;
@@ -1245,9 +1261,6 @@ html:not(.visual-refresh) .sidebar_c48ade:not(.hidden_c48ade) {
 .chat_f75fb0 .content_f75fb0:before {
   box-shadow: none;
 }
-.content_f75fb0 > .wrapper__28a87 {
-  background: rgba(0, 0, 0, 0.5);
-}
 .gatedContent__7184c .image__7184c {
   filter: hue-rotate(-47deg) saturate(2);
   opacity: 0.5;
@@ -1393,12 +1406,6 @@ div[aria-checked="true"] .mentionButton__841c8 {
 .tile__2f4f7 {
   background-color: rgba(0, 0, 0, 0);
 }
-.participantsButton__211d1 {
-  background-color: var(--card-color);
-}
-.participantsButton__211d1:hover {
-  background-color: rgba(0, 0, 0, 0.6);
-}
 .border__2f4f7.speaking__2f4f7 {
   box-shadow: inset 0 0 0 2px var(--main-color);
 }
@@ -1420,38 +1427,11 @@ div[aria-checked="true"] .mentionButton__841c8 {
 .videoWrapper__2f4f7 {
   background-color: rgba(0, 0, 0, calc(var(--background-shading) * 0.7));
 }
-.button__201d5.centerButton_f1ceac {
+.centerButton_f1ceac:not(.experimentButton_f1ceac) {
   border-radius: 50%;
 }
-.colorable_f1ceac.primaryDark_f1ceac {
-  background-color: rgba(0, 0, 0, 0.6);
-  color: #fff;
-}
-.colorable_f1ceac.primaryDark_f1ceac:hover {
-  background-color: var(--hover-color);
-  color: #fff;
-}
-.colorable_f1ceac.white_f1ceac {
-  color: #fff;
-  background-color: var(--main-color);
-}
-.colorable_f1ceac.white_f1ceac:hover {
-  background-color: var(--hover-color);
-}
-.colorable_f1ceac.white_f1ceac.active_f1ceac {
-  background-color: var(--hover-color);
-}
-.colorable_f1ceac.white_f1ceac.active_f1ceac:hover {
-  background-color: var(--hover-color);
-}
-.colorable_f1ceac.white_f1ceac .centerIcon_f1ceac {
-  color: #fff;
-}
-.colorable_f1ceac.white_f1ceac .centerIcon_f1ceac.active_f1ceac {
-  color: var(--main-color);
-}
-.colorable_f1ceac.red_f1ceac {
-  background-color: var(--danger-color);
+.buttonSection__1405b.experimentButtonSection__1405b {
+  background-color: var(--card-color);
 }
 .channelChatWrapper_cb9592 {
   background: rgba(0, 0, 0, 0);
@@ -2062,54 +2042,45 @@ div[aria-checked="true"] .mentionButton__841c8 {
   scrollbar-width: unset !important;
   scrollbar-color: unset !important;
 }
-.auto__99f8c::-webkit-scrollbar {
+:is(.auto__99f8c, .auto_d125d2)::-webkit-scrollbar {
   width: 14px;
 }
-.thin__99f8c::-webkit-scrollbar {
-  width: 10px;
+:is(.auto__99f8c, .auto_d125d2)::-webkit-scrollbar-thumb,
+:is(.auto__99f8c, .auto_d125d2)::-webkit-scrollbar-track {
+  border: 3px solid rgba(0, 0, 0, 0);
+  border-radius: 7px;
 }
-.none__99f8c::-webkit-scrollbar {
+:is(.auto__99f8c, .auto_d125d2)::-webkit-scrollbar-thumb {
+  background-color: var(--main-color);
+}
+:is(.auto__99f8c, .auto_d125d2)::-webkit-scrollbar-thumb:active {
+  background-color: var(--hover-color);
+}
+:is(.auto__99f8c, .auto_d125d2)::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+}
+:is(.thin__99f8c, .thin_d125d2)::-webkit-scrollbar {
+  width: 8px;
+}
+:is(.thin__99f8c, .thin_d125d2)::-webkit-scrollbar-thumb {
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 7px;
+  background-color: var(--main-color);
+}
+:is(.thin__99f8c, .thin_d125d2)::-webkit-scrollbar-thumb:active {
+  background-color: var(--hover-color);
+}
+:is(.thin__99f8c, .thin_d125d2)::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 7px;
+}
+.none__99f8c::-webkit-scrollbar,
+.none_d125d2::-webkit-scrollbar {
   width: 0px;
-}
-::-webkit-scrollbar-thumb,
-::-webkit-scrollbar-track,
-::-webkit-scrollbar-track-piece {
-  border: 3px solid rgba(0, 0, 0, 0) !important;
-  border-radius: 7px !important;
-  background-clip: padding-box !important;
-}
-::-webkit-scrollbar-thumb {
-  background-color: var(--main-color) !important;
-}
-::-webkit-scrollbar-thumb:active {
-  background-color: var(--hover-color) !important;
-}
-::-webkit-scrollbar-track,
-::-webkit-scrollbar-track-piece {
-  background-color: rgba(0, 0, 0, 0) !important;
-}
-.membersWrap_c8ffbb .scrollerBase__99f8c::-webkit-scrollbar-thumb,
-.membersWrap_c8ffbb .scrollerBase__99f8c::-webkit-scrollbar-track-piece {
-  visibility: hidden;
-}
-.membersWrap_c8ffbb .scrollerBase__99f8c:hover::-webkit-scrollbar-thumb,
-.membersWrap_c8ffbb .scrollerBase__99f8c:hover::-webkit-scrollbar-track-piece {
-  visibility: visible;
-}
-.chat_f75fb0 .scrollerBase__99f8c::-webkit-scrollbar-track-piece,
-.membersWrap_c8ffbb .scrollerBase__99f8c::-webkit-scrollbar-track-piece {
-  background-color: rgba(
-    0,
-    0,
-    0,
-    calc(var(--background-shading) * 0.3)
-  ) !important;
 }
 textarea::-webkit-scrollbar {
   display: none;
-}
-.modalContent_c50f62::-webkit-scrollbar {
-  width: 0;
 }
 .slider_a562c8 .bar_a562c8 {
   background: hsla(0, 0%, 100%, 0.04);
@@ -2235,26 +2206,26 @@ textarea::-webkit-scrollbar {
 .tooltip__382e7.tooltipNested__382e7 {
   background: rgba(0, 0, 0, 0.9);
 }
-.tooltip__382e7.tooltipPrimary__382e7 > .tooltipPointer__382e7,
-.tooltip__382e7.tooltipNested__382e7 > .tooltipPointer__382e7 {
+.tooltip__382e7.tooltipPrimary__382e7 .tooltipPointer__382e7,
+.tooltip__382e7.tooltipNested__382e7 .tooltipPointer__382e7 {
   border-top-color: rgba(0, 0, 0, 0.9);
 }
 .tooltip__382e7.tooltipBrand__382e7 {
   background: var(--main-color);
 }
-.tooltip__382e7.tooltipBrand__382e7 > .tooltipPointer__382e7 {
+.tooltip__382e7.tooltipBrand__382e7 .tooltipPointer__382e7 {
   border-top-color: var(--main-color);
 }
 .tooltip__382e7.tooltipRed__382e7 {
   background: var(--danger-color);
 }
-.tooltip__382e7.tooltipRed__382e7 > .tooltipPointer__382e7 {
+.tooltip__382e7.tooltipRed__382e7 .tooltipPointer__382e7 {
   border-top-color: var(--danger-color);
 }
 .tooltip__382e7.tooltipGreen__382e7 {
   background: var(--success-color);
 }
-.tooltip__382e7.tooltipGreen__382e7 > .tooltipPointer__382e7 {
+.tooltip__382e7.tooltipGreen__382e7 .tooltipPointer__382e7 {
   border-top-color: var(--success-color);
 }
 .tooltip__382e7.tooltipTop__382e7 {
@@ -2381,11 +2352,11 @@ textarea::-webkit-scrollbar {
   color: #fff;
 }
 .folder__48112 {
-  background-color: rgba(0, 0, 0, 0) !important;
+  background-color: rgba(0, 0, 0, 0);
   transition: all 0.3s ease-in-out;
 }
 .folder__48112.hover__48112 {
-  background-color: hsla(0, 0%, 100%, 0.1) !important;
+  background-color: hsla(0, 0%, 100%, 0.1);
 }
 .noIcon_f34534 {
   background: var(--card-color);
@@ -2946,7 +2917,8 @@ textarea::-webkit-scrollbar {
 }
 .memberInner__5d473 {
   position: relative;
-  background: rgba(0, 0, 0, 0);
+  padding: 0 16px 0 8px;
+  width: unset;
   transition: all 0.15s ease-in-out, transform 0.1s ease-in-out;
   z-index: 1;
 }
@@ -3007,7 +2979,7 @@ textarea::-webkit-scrollbar {
   transition: all 0.15s ease-in-out;
   overflow: hidden;
 }
-.member__5d473:is(:hover, .selected__91a9d) .memberInner__5d473 {
+.member__5d473:is(:hover, .selected__91a9d) .childContainer__91a9d {
   background: rgba(0, 0, 0, 0);
 }
 .member__5d473:is(:hover, .selected__91a9d) .username__703b9:before {
@@ -3016,6 +2988,9 @@ textarea::-webkit-scrollbar {
 .member__5d473:is(:hover, .selected__91a9d)
   [style^="color:"].username__703b9:before {
   opacity: 0.07;
+}
+.member__5d473.selected__91a9d .childContainer__91a9d {
+  background: rgba(0, 0, 0, 0);
 }
 .member__5d473.selected__91a9d .username__703b9 {
   -webkit-text-fill-color: #fff;
@@ -3031,12 +3006,8 @@ textarea::-webkit-scrollbar {
 .member__5d473.selected__91a9d .activityText__5d473 strong {
   color: #fff;
 }
-.member__5d473.selected__91a9d .ownerIcon__5d473 {
-  filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.7));
-  opacity: 0.7;
-}
-.member__5d473.selected__91a9d .icon_ad923e,
-.member__5d473.selected__91a9d .activityEmoji__5d473 {
+.member__5d473.selected__91a9d .ownerIcon__5d473,
+.member__5d473.selected__91a9d .icon_c9d15c {
   filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.7));
 }
 .memberGroupsPlaceholder_c8ffbb {
@@ -3128,6 +3099,78 @@ textarea::-webkit-scrollbar {
   background-color: hsla(0, 0%, 100%, 0.07);
   font-size: 10px;
   padding: 0 5px;
+}
+[src*="144881947557101568"].avatar_c19a55 ~ .header_c19a55 {
+  --tag: "CV Creator";
+}
+.avatar_c19a55:is([src*="194151269399527425"], [src*="393900343135830016"])
+  ~ .header_c19a55 {
+  --tag: "CV Admin";
+}
+.avatar_c19a55:is(
+    [src*="332394843743584256"],
+    [src*="240437190339854337"],
+    [src*="126652966265421824"]
+  )
+  ~ .header_c19a55 {
+  --tag: "CV Team";
+}
+.avatar_c19a55:is(
+    [src*="195270435015884800"],
+    [src*="236579127090610176"],
+    [src*="97797564866236416"],
+    [src*="150750980097441792"],
+    [src*="213067580531933196"],
+    [src*="858800346884997142"],
+    [src*="310468127534350347"],
+    [src*="384167892012498944"],
+    [src*="1141445806386319370"],
+    [src*="427114049487241227"]
+  )
+  ~ .header_c19a55 {
+  --tag: "CV Contributor";
+}
+.avatar_c19a55:is(
+    [src*="262989909411758080"],
+    [src*="168551219135119361"],
+    [src*="241500427105992704"],
+    [src*="151995147150819328"],
+    [src*="157699533134888961"],
+    [src*="157492606752784384"],
+    [src*="174525242939670528"],
+    [src*="78890013378486272"],
+    [src*="213263668312408066"],
+    [src*="152431535914614785"],
+    [src*="112619227466182656"],
+    [src*="297873043265552384"],
+    [src*="258031697646321666"],
+    [src*="109933711142719488"],
+    [src*="251260900252712962"],
+    [src*="199184208319610880"],
+    [src*="122731339890950145"],
+    [src*="436228721033216009"],
+    [src*="66214870705516544"],
+    [src*="172426681800196096"],
+    [src*="158311402677731328"],
+    [src*="284122164582416385"],
+    [src*="107965218868457472"],
+    [src*="183795147236966412"],
+    [src*="245133485688225793"]
+  )
+  ~ .header_c19a55 {
+  --tag: "CV Donator";
+}
+[src*="538745942493495298"].avatar_c19a55 ~ .header_c19a55 {
+  --tag: "CV Translator";
+}
+[src*="265627010733178892"].avatar_c19a55 ~ .header_c19a55 {
+  --tag: "CV Guide Maker";
+}
+[src*="335677038830682112"].avatar_c19a55 ~ .header_c19a55 {
+  --tag: "Retired Old Man";
+}
+[src*="309976820109803520"].avatar_c19a55 ~ .header_c19a55 {
+  --tag: "Former CV Team";
 }
 .container__0be77 {
   background: rgba(0, 0, 0, calc(var(--background-shading) * 0.4));
@@ -4491,15 +4534,6 @@ code {
 .wrapper_f61d60.icon_b52c3f {
   padding-left: 1.2rem;
 }
-.mentioned__5126c .mention.interactive {
-  background-color: hsla(0, 0%, 100%, 0.1);
-  color: var(--main-color);
-}
-.mentioned__5126c .mention.interactive:hover {
-  background-color: hsla(0, 0%, 100%, 0.07);
-  color: var(--hover-color);
-  text-decoration: none;
-}
 .message__5126c.mentioned__5126c {
   background-color: hsla(0, 0%, 100%, 0.05);
 }
@@ -4784,7 +4818,6 @@ code {
 .theme-dark .root__49fc1 {
   background: var(--modal-color);
   box-shadow: none;
-  backdrop-filter: blur(1.5px);
 }
 .theme-dark .modal__487be .footer__49fc1,
 .theme-dark .root__49fc1 .footer__49fc1 {
@@ -6952,10 +6985,7 @@ html:not(.visual-refresh) .input__991a0 {
   background-color: hsla(0, 0%, 100%, 0.07);
 }
 .custom-profile-theme .scroller_fcb628::-webkit-scrollbar-thumb {
-  background: linear-gradient(
-    var(--profile-gradient-primary-color),
-    var(--profile-gradient-secondary-color)
-  );
+  background-color: --profile-gradient-secondary-color;
 }
 .custom-profile-theme .note_fcb628 .input__0f084:focus {
   box-shadow: 0 0 2px 2px var(--profile-gradient-primary-color);
@@ -6963,7 +6993,7 @@ html:not(.visual-refresh) .input__991a0 {
 .custom-profile-theme .channelTextArea__74017 {
   background: var(--input-background);
 }
-.custom-profile-theme .channelTextArea__74017:focus-visible {
+.custom-profile-theme .channelTextArea__74017:focus-within {
   box-shadow: 0 0 2px 2px var(--profile-gradient-primary-color);
 }
 .connectedAccountVerifiedIcon_e6abe8 {
@@ -7236,6 +7266,12 @@ html:not(.visual-refresh-chat-input) .inner_a99829 {
 }
 .settingCard__1a4ef {
   background-color: var(--card-color);
+}
+.settingCard__1a4ef.active__1a4ef {
+  background-color: var(--card-color);
+}
+.cardFolder__1a4ef {
+  background-color: rgba(0, 0, 0, 0);
 }
 .iconWrapper__4a3a5 {
   background-color: var(--card-color);
@@ -8122,9 +8158,6 @@ html:not(.visual-refresh-chat-input) .inner_a99829 {
     transparent
   );
 }
-.sidebarRegionScroller__23e6b::-webkit-scrollbar {
-  width: 0 !important;
-}
 .sidebar__23e6b {
   height: 100%;
   width: 260px;
@@ -8561,7 +8594,6 @@ html:not(.visual-refresh-chat-input) .inner_a99829 {
 }
 .role_dfa8b6 {
   position: relative;
-  display: flex;
   flex-direction: row-reverse;
   border-radius: 3px;
   transition: all 0.1s ease-in-out;
@@ -8569,7 +8601,7 @@ html:not(.visual-refresh-chat-input) .inner_a99829 {
   border-color: rgba(0, 0, 0, 0);
   cursor: default;
 }
-.role_dfa8b6 > .roleName_dfa8b6 {
+.role_dfa8b6 .roleName_dfa8b6 {
   margin-right: 0;
   margin-left: 4px;
   color: hsla(0, 0%, 100%, 0.9);
@@ -8577,9 +8609,6 @@ html:not(.visual-refresh-chat-input) .inner_a99829 {
 }
 .role_dfa8b6:hover .roleCircle_dfa8b6:before {
   opacity: 0.3;
-}
-.role_dfa8b6:hover > .roleName_dfa8b6 {
-  color: #fff;
 }
 .roleRemoveButton_dfa8b6 {
   position: static;
@@ -8592,8 +8621,8 @@ html:not(.visual-refresh-chat-input) .inner_a99829 {
   left: calc(100% - 7px);
 }
 .role_dfa8b6 .roleCircle_dfa8b6 {
-  width: 0 !important;
-  height: 0 !important;
+  width: 0;
+  height: 0;
 }
 .role_dfa8b6 .roleCircle_dfa8b6:not(:empty) {
   margin-left: 6px;
@@ -9130,4 +9159,34 @@ div#magane div.stickerWindow div.packs-toolbar {
 }
 .credentialItem__6c75d.container__91a9d:first-of-type {
   border: none;
+}
+.visual-refresh .appMount__51fd7 {
+  background: var(--background-overlay);
+}
+.visual-refresh .bg__960e4 {
+  background: var(--background-image) var(--background-position) /
+    var(--background-size) var(--background-repeat) var(--background-attachment);
+  filter: grayscale(var(--background-grayscale)) sepia(var(--background-sepia))
+    invert(var(--background-invert)) brightness(var(--background-brightness))
+    contrast(var(--background-contrast)) saturate(var(--background-saturation))
+    blur(var(--background-blur));
+  z-index: -9999;
+}
+.visual-refresh .wrapper_ef3116,
+.visual-refresh .panels_c48ade,
+.visual-refresh .header_f37cb1,
+.visual-refresh .sidebar_c48ade::after .standardSidebarView__23e6b,
+.visual-refresh .sidebarRegionScroller__23e6b,
+.visual-refresh .tabBody__133bf {
+  background-color: rgba(0, 0, 0, 0);
+}
+.visual-refresh .chatContent_f75fb0 {
+  background: rgba(0, 0, 0, calc(var(--background-shading) * 0.5));
+}
+.visual-refresh .container__2637a,
+.visual-refresh .privateChannels__35e86 {
+  background: rgba(0, 0, 0, calc(var(--background-shading) * 0.3));
+}
+.visual-refresh-chat-input .channelTextArea__74017 {
+  background-color: rgba(0, 0, 0, 0.6);
 }
